objects/agf__ADM_Product_Tag_Work_Metadata__c.object
<CustomObject>
    <fields>
        <fullName>agf__Product_Tag__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Tag</label>
        <referenceTo>agf__ADM_Product_Tag__c</referenceTo>
        <relationshipLabel>Product Tag Work Metadata</relationshipLabel>
        <relationshipName>Product_Tag_Work_Metadata</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Record_Type__c</fullName>
        <label>Record Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Work_Metadata__c</fullName>
        <label>Work Metadata</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Product Tag Work Metadata</label>
    <nameField>
        <displayFormat>PTM-{0000}</displayFormat>
        <label>Product Tag Work Metadata Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Tag Work Metadata</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>